2019-12-29 Alexander Voropay <alec@sensi.org>
 * rename min() to resolve conflict with minwindef.h

2019-12-08 Geert Stappers <stappers@stappers.it>
 * Removed '$Id$' markers for src/bus/*.c
 * Removed editor hints from src/bus/*.c
 * Removed spurious '#undef DEBUG' from two src/bus/*.c files
 * Applied Python3 binding fix reported on SF forum

2019-12-03 Jiri Gaisler <jiri@gaisler.se>
 * Define stepping 0 for Xilinx xc6slx75 FPGA
 * src/bus/ahbjtag.c: New file. Implements bus driver for GRLIB AHBJTAG core.

2019-11-25 Alexander Voropay <alec@sensi.org>
 * git log hash as version number

2019-08-03 Geert Stappers <stappers@stappers.it>
 * data/MANUFACTURERS got update information
 * minor data/MANUFACTURERS update
 * Added an empty data/amd/PARTS as reservation for AMD
 * Added an empty data/0/PARTS for further JEP106 support

2019-08-03 Karl Hammer <karl@aspodata.se>
 * vhdl functions shouldn't know anything about part
 * Disambiguate part

2018-09-21 Geert Stappers <stappers@stappers.it>
 * Released  2018.09

2018-09-21 Andreas Moog <andreas.moog@warperbbs.de>
 * Prefix all REG_* with BFIN_REG, closed bug#119

2018-06-27 Milan Prochac <milan@prochac.sk>

 * Added J-Link interface select, closes bug#127

2018-06-19 Geert Stappers <stappers@stappers.nl>

 * Released  2018.06

2018-06-19 zmatkar <zmatkar@users.sourceforge.net>

 * Enhancement#123 JTAGv3 and v5 cables driver

2018-06-19 Marton Miklos <martonmiklos@users.sf.net>
 * Document the 0x to enforce hexadecimal, closes bug#112

2018-06-18 Jose Vasconcellos <matein4@users.sf.net>
 * Support ixp425 stepping B1, closes bug#111

2018-03-24 Jiri Gaisler <jiri@gaisler.se>
 * Code clean-up: remove double const keywords.

2018-03-24 kuenzerj <Jens.Kuenzer@fpga.homeip.net>
 * LIBFTD2XX for x86_64*cygwin is not in i386 directory so use amd64
 * pull in all required libraries in python setup.py

2018-03-24 Hiroki Mori <yamori813@yahoo.co.jp>
 * add freebsd gpio support
 * fix error message on PPISCTRL
